syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/common/common_object.proto";
import "proto/core/store/store_object.proto";

message SaveObjectAction {
    syft.core.common.UID obj_id = 1;
    syft.core.store.StorableObject obj = 2;
}